@@ -25,6 +25,8 @@ Zope Changes
 
       - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership
 
+      - Collector #1944: HTTPRequest.resolve_url has error in raising errors
+
   Zope 2.8.7 (2007/05/29)
 
     Features added:
